[gd_scene load_steps=20 format=3 uid="uid://bhop26d66s581"]

[ext_resource type="Script" uid="uid://bnorctsg14k6r" path="res://scripts/player/mouse_capture_component.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bul1vpdae7den" path="res://scripts/player/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://cebgaixlayyse" path="res://scripts/player/camera_controller.gd" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://c5p87x3ks4xpa" path="res://scripts/player/statemachine/state_machine.gd" id="3_smehm"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://df13xkel4k8sr" path="res://scripts/player/statemachine/states/idle.gd" id="4_ur7pv"]
[ext_resource type="Script" uid="uid://bcpbgeg0o7ewv" path="res://scripts/player/statemachine/states/moving.gd" id="5_d2wvv"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://co5wi2rkn38ga" path="res://scripts/player/statemachine/states/walking.gd" id="6_jej6c"]
[ext_resource type="Script" uid="uid://b4rgyed258bta" path="res://scripts/player/statemachine/states/sprinting.gd" id="7_f1ej7"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="7_fjrip"]
[ext_resource type="Script" uid="uid://uwj224t7vae5" path="res://scripts/player/statemachine/states/standing.gd" id="8_oprun"]
[ext_resource type="Script" uid="uid://j0kdveal7on7" path="res://scripts/player/statemachine/states/crouching.gd" id="9_a8ls1"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="9_y4r1p"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="12_3v2ag"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_f1ej7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_smehm"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_g2els")

[node name="StandCol" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="CrouchCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("SphereShape3D_f1ej7")

[node name="Head" type="Node3D" parent="." node_paths=PackedStringArray("component_mouse_capture", "camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("2_qhqgy")
component_mouse_capture = NodePath("../Components/MouseCaptureComponent")
camera = NodePath("Camera3D")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_smehm")
target_position = Vector3(0, 0, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("3_smehm")
player = NodePath("..")

[node name="Root" type="Node" parent="StateMachine"]

[node name="Mouvement" type="Node" parent="StateMachine/Root"]

[node name="Grounded" type="Node" parent="StateMachine/Root/Mouvement"]

[node name="Idle" type="Node" parent="StateMachine/Root/Mouvement/Grounded"]
script = ExtResource("4_ur7pv")

[node name="Moving" type="Node" parent="StateMachine/Root/Mouvement/Grounded"]
script = ExtResource("5_d2wvv")

[node name="Walking" type="Node" parent="StateMachine/Root/Mouvement/Grounded/Moving"]
script = ExtResource("6_jej6c")

[node name="Sprinting" type="Node" parent="StateMachine/Root/Mouvement/Grounded/Moving"]
script = ExtResource("7_f1ej7")

[node name="AirBorn" type="Node" parent="StateMachine/Root/Mouvement"]

[node name="Jumping" type="Node" parent="StateMachine/Root/Mouvement/AirBorn"]

[node name="Posture" type="Node" parent="StateMachine/Root"]

[node name="Standing" type="Node" parent="StateMachine/Root/Posture"]
script = ExtResource("8_oprun")

[node name="Crouching" type="Node" parent="StateMachine/Root/Posture"]
script = ExtResource("9_a8ls1")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_dqkch")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_tuyoq")

[node name="Mouvement" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fjrip")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateChart/Root/Mouvement"]
script = ExtResource("6_fjrip")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/Root/Mouvement/Grounded"]
script = ExtResource("7_fjrip")

[node name="OnMove" type="Node" parent="StateChart/Root/Mouvement/Grounded/idle"]
script = ExtResource("9_y4r1p")
to = NodePath("../../Moving")
event = &"on_moving"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/Root/Mouvement/Grounded"]
script = ExtResource("6_fjrip")
initial_state = NodePath("Walking")

[node name="Walking" type="Node" parent="StateChart/Root/Mouvement/Grounded/Moving"]
script = ExtResource("7_fjrip")

[node name="onSprint" type="Node" parent="StateChart/Root/Mouvement/Grounded/Moving/Walking"]
script = ExtResource("9_y4r1p")
to = NodePath("../../Sprinting")
event = &"on_sprinting"
delay_in_seconds = "0.0"

[node name="Sprinting" type="Node" parent="StateChart/Root/Mouvement/Grounded/Moving"]
script = ExtResource("7_fjrip")

[node name="OnWalk" type="Node" parent="StateChart/Root/Mouvement/Grounded/Moving/Sprinting"]
script = ExtResource("9_y4r1p")
to = NodePath("../../Walking")
event = &"on_walking"
delay_in_seconds = "0.0"

[node name="OnIdle" type="Node" parent="StateChart/Root/Mouvement/Grounded/Moving"]
script = ExtResource("9_y4r1p")
to = NodePath("../../idle")
event = &"on_idle"
delay_in_seconds = "0.0"

[node name="AirBorn" type="Node" parent="StateChart/Root/Mouvement"]
script = ExtResource("6_fjrip")
initial_state = NodePath("jumping")

[node name="jumping" type="Node" parent="StateChart/Root/Mouvement/AirBorn"]
script = ExtResource("7_fjrip")

[node name="Posture" type="Node" parent="StateChart/Root"]
script = ExtResource("6_fjrip")
initial_state = NodePath("Standing")

[node name="Standing" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("7_fjrip")

[node name="OnStand" type="Node" parent="StateChart/Root/Posture/Standing"]
script = ExtResource("9_y4r1p")
to = NodePath("../../Crouching")
event = &"on_crouch"
delay_in_seconds = "0.0"

[node name="Crouching" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("7_fjrip")

[node name="OnCrouch" type="Node" parent="StateChart/Root/Posture/Crouching"]
script = ExtResource("9_y4r1p")
to = NodePath("../../Standing")
event = &"on_stand"
delay_in_seconds = "0.0"

[node name="Components" type="Node" parent="."]

[node name="MouseCaptureComponent" type="Node" parent="Components"]
script = ExtResource("1_3vyb7")

[node name="StateChartDebugger" parent="." instance=ExtResource("12_3v2ag")]
offset_right = -849.0
offset_bottom = -241.0
initial_node_to_watch = NodePath("../StateChart")

[connection signal="state_physics_processing" from="StateChart/Root/Mouvement/Grounded/idle" to="StateMachine/Root/Mouvement/Grounded/Idle" method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Mouvement/Grounded/Moving" to="StateMachine/Root/Mouvement/Grounded/Moving" method="_on_moving_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mouvement/Grounded/Moving/Walking" to="StateMachine/Root/Mouvement/Grounded/Moving/Walking" method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mouvement/Grounded/Moving/Walking" to="StateMachine/Root/Mouvement/Grounded/Moving/Walking" method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Mouvement/Grounded/Moving/Sprinting" to="StateMachine/Root/Mouvement/Grounded/Moving/Sprinting" method="_on_sprinting_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Mouvement/Grounded/Moving/Sprinting" to="StateMachine/Root/Mouvement/Grounded/Moving/Sprinting" method="_on_sprinting_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Standing" to="StateMachine/Root/Posture/Standing" method="_on_standing_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Standing" to="StateMachine/Root/Posture/Standing" method="_on_standing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Crouching" to="StateMachine/Root/Posture/Crouching" method="_on_crouching_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Crouching" to="StateMachine/Root/Posture/Crouching" method="_on_crouching_state_physics_processing"]
